--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello guys</title>
   </head>
-  <body></body>
+  <body>
+<H1>HELLO MY FRIEND</H1>
+</body>
 </html>
